bela-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BelaInitSettings"][::core::mem::size_of::<BelaInitSettings>() - 520usize];
    ["Alignment of BelaInitSettings"][::core::mem::align_of::<BelaInitSettings>() - 8usize];
    ["Offset of field: BelaInitSettings::periodSize"]
        [::core::mem::offset_of!(BelaInitSettings, periodSize) - 0usize];
    ["Offset of field: BelaInitSettings::useAnalog"]
        [::core::mem::offset_of!(BelaInitSettings, useAnalog) - 4usize];
    ["Offset of field: BelaInitSettings::useDigital"]
        [::core::mem::offset_of!(BelaInitSettings, useDigital) - 8usize];
    ["Offset of field: BelaInitSettings::numAudioInChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numAudioInChannels) - 12usize];
    ["Offset of field: BelaInitSettings::numAudioOutChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numAudioOutChannels) - 16usize];
    ["Offset of field: BelaInitSettings::numAnalogInChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numAnalogInChannels) - 20usize];
    ["Offset of field: BelaInitSettings::numAnalogOutChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numAnalogOutChannels) - 24usize];
    ["Offset of field: BelaInitSettings::numDigitalChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numDigitalChannels) - 28usize];
    ["Offset of field: BelaInitSettings::beginMuted"]
        [::core::mem::offset_of!(BelaInitSettings, beginMuted) - 32usize];
    ["Offset of field: BelaInitSettings::dacLevel"]
        [::core::mem::offset_of!(BelaInitSettings, dacLevel) - 36usize];
    ["Offset of field: BelaInitSettings::adcLevel"]
        [::core::mem::offset_of!(BelaInitSettings, adcLevel) - 40usize];
    ["Offset of field: BelaInitSettings::pgaGain"]
        [::core::mem::offset_of!(BelaInitSettings, pgaGain) - 44usize];
    ["Offset of field: BelaInitSettings::headphoneLevel"]
        [::core::mem::offset_of!(BelaInitSettings, headphoneLevel) - 52usize];
    ["Offset of field: BelaInitSettings::numMuxChannels"]
        [::core::mem::offset_of!(BelaInitSettings, numMuxChannels) - 56usize];
    ["Offset of field: BelaInitSettings::audioExpanderInputs"]
        [::core::mem::offset_of!(BelaInitSettings, audioExpanderInputs) - 60usize];
    ["Offset of field: BelaInitSettings::audioExpanderOutputs"]
        [::core::mem::offset_of!(BelaInitSettings, audioExpanderOutputs) - 64usize];
    ["Offset of field: BelaInitSettings::pruNumber"]
        [::core::mem::offset_of!(BelaInitSettings, pruNumber) - 68usize];
    ["Offset of field: BelaInitSettings::pruFilename"]
        [::core::mem::offset_of!(BelaInitSettings, pruFilename) - 72usize];
    ["Offset of field: BelaInitSettings::detectUnderruns"]
        [::core::mem::offset_of!(BelaInitSettings, detectUnderruns) - 328usize];
    ["Offset of field: BelaInitSettings::verbose"]
        [::core::mem::offset_of!(BelaInitSettings, verbose) - 332usize];
    ["Offset of field: BelaInitSettings::enableLED"]
        [::core::mem::offset_of!(BelaInitSettings, enableLED) - 336usize];
    ["Offset of field: BelaInitSettings::stopButtonPin"]
        [::core::mem::offset_of!(BelaInitSettings, stopButtonPin) - 340usize];
    ["Offset of field: BelaInitSettings::highPerformanceMode"]
        [::core::mem::offset_of!(BelaInitSettings, highPerformanceMode) - 344usize];
    ["Offset of field: BelaInitSettings::interleave"]
        [::core::mem::offset_of!(BelaInitSettings, interleave) - 348usize];
    ["Offset of field: BelaInitSettings::analogOutputsPersist"]
        [::core::mem::offset_of!(BelaInitSettings, analogOutputsPersist) - 352usize];
    ["Offset of field: BelaInitSettings::uniformSampleRate"]
        [::core::mem::offset_of!(BelaInitSettings, uniformSampleRate) - 356usize];
    ["Offset of field: BelaInitSettings::audioThreadStackSize"]
        [::core::mem::offset_of!(BelaInitSettings, audioThreadStackSize) - 360usize];
    ["Offset of field: BelaInitSettings::auxiliaryTaskStackSize"]
        [::core::mem::offset_of!(BelaInitSettings, auxiliaryTaskStackSize) - 364usize];
    ["Offset of field: BelaInitSettings::setup"]
        [::core::mem::offset_of!(BelaInitSettings, setup) - 368usize];
    ["Offset of field: BelaInitSettings::render"]
        [::core::mem::offset_of!(BelaInitSettings, render) - 376usize];
    ["Offset of field: BelaInitSettings::cleanup"]
        [::core::mem::offset_of!(BelaInitSettings, cleanup) - 384usize];
    ["Offset of field: BelaInitSettings::ampMutePin"]
        [::core::mem::offset_of!(BelaInitSettings, ampMutePin) - 392usize];
    ["Offset of field: BelaInitSettings::audioThreadDone"]
        [::core::mem::offset_of!(BelaInitSettings, audioThreadDone) - 400usize];
    ["Offset of field: BelaInitSettings::codecMode"]
        [::core::mem::offset_of!(BelaInitSettings, codecMode) - 408usize];
    ["Offset of field: BelaInitSettings::audioInputGains"]
        [::core::mem::offset_of!(BelaInitSettings, audioInputGains) - 416usize];
    ["Offset of field: BelaInitSettings::headphoneGains"]
        [::core::mem::offset_of!(BelaInitSettings, headphoneGains) - 432usize];
    ["Offset of field: BelaInitSettings::adcGains"]
        [::core::mem::offset_of!(BelaInitSettings, adcGains) - 448usize];
    ["Offset of field: BelaInitSettings::lineOutGains"]
        [::core::mem::offset_of!(BelaInitSettings, lineOutGains) - 464usize];
    ["Offset of field: BelaInitSettings::disabledDigitalChannels"]
        [::core::mem::offset_of!(BelaInitSettings, disabledDigitalChannels) - 480usize];
    ["Offset of field: BelaInitSettings::threadCount"]
        [::core::mem::offset_of!(BelaInitSettings, threadCount) - 484usize];
    ["Offset of field: BelaInitSettings::render_pre"]
        [::core::mem::offset_of!(BelaInitSettings, render_pre) - 488usize];
    ["Offset of field: BelaInitSettings::render_post"]
        [::core::mem::offset_of!(BelaInitSettings, render_post) - 496usize];
    ["Offset of field: BelaInitSettings::audioSampleRate"]
        [::core::mem::offset_of!(BelaInitSettings, audioSampleRate) - 504usize];
    ["Offset of field: BelaInitSettings::board"]
        [::core::mem::offset_of!(BelaInitSettings, board) - 508usize];
    ["Offset of field: BelaInitSettings::projectName"]
        [::core::mem::offset_of!(BelaInitSettings, projectName) - 512usize];
};
impl Default for BelaInitSettings {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " \\ingroup auxtask\n\n Auxiliary task variable. Auxiliary tasks are created using createAuxiliaryTask() and\n automatically cleaned up after cleanup() finishes."]
pub type AuxiliaryTask = *mut ::core::ffi::c_void;
unsafe extern "C" {
    #[doc = " \\brief Allocate the data structure containing settings for Bela.\n\n This function should be used to allocate the structure that holds initialisation\n data for Bela in order to preserve binary compatibility across versions of\n the library."]
    pub fn Bela_InitSettings_alloc() -> *mut BelaInitSettings;
}
unsafe extern "C" {
    #[doc = " \\brief De-allocate the data structure containing settings for Bela.\n\n This function should be used to de-allocate the structure that holds initialisation\n data for Bela.\n\n \\param settings Pointer to structure to be de-allocated."]
    pub fn Bela_InitSettings_free(settings: *mut BelaInitSettings);
}
unsafe extern "C" {
    #[doc = " \\brief Initialise the data structure containing settings for Bela.\n\n This function should be called in main() before parsing any command-line arguments. It\n sets default values in the data structure which specifies the Bela settings, including\n frame sizes, numbers of channels, volume levels and other parameters.\n\n \\param settings Structure holding initialisation data for Bela."]
    pub fn Bela_defaultSettings(settings: *mut BelaInitSettings);
}
unsafe extern "C" {
    #[doc = " \\brief Initialise the data structure containing settings for Bela.\n\n This function fwill be called by Bela_defaultSettings() after the settings have been\n initialied. It has weak linking so the user is free - but not forced to - define it.\n It can be used to override some of the default settings if the user code does not have\n access to the call to Bela_defaultSettings() (e.g.: because it is handled by the backend\n code).\n\n \\param settings Structure holding initialisation data for Bela."]
    pub fn Bela_userSettings(settings: *mut BelaInitSettings);
}
unsafe extern "C" {
    #[doc = " \\brief Get long options from command line argument list, including Bela standard options\n\n This function should be used in main() to process command line options, in place of the\n standard library getopt_long(). Internally, it parses standard Bela command-line options,\n storing the results in the settings data structure. Any options which are not part of the\n Bela standard options will be returned, as they would normally be in getopt_long().\n\n \\param argc Number of command line options, as passed to main().\n \\param argv Array of command line options, as passed to main().\n \\param customShortOptions List of short options to be parsed, analogous to getopt_long(). This\n list should not include any characters already parsed as part of the Bela standard options.\n \\param customLongOptions List of long options to parsed, analogous to getopt_long(). This\n list should not include any long options already parsed as part of the Bela standard options.\n \\param settings Data structure holding initialisation settings for Bela. Any standard options\n parsed will automatically update this data structure.\n\n \\return Value of the next option parsed which is not a Bela standard option, or -1 when the\n argument list has been exhausted. Similar to the return value of getopt_long() except that Bela\n standard options are handled internally and not returned."]
    pub fn Bela_getopt_long(
        argc: ::core::ffi::c_int,
        argv: *const *mut ::core::ffi::c_char,
        customShortOptions: *const ::core::ffi::c_char,
        customLongOptions: *const option,
        settings: *mut BelaInitSettings,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Print usage information for Bela standard options.\n\n This function should be called from your code wherever you wish to print usage information for the\n user. It will print usage information on Bela standard options, after which you can print usage\n information for your own custom options."]
    pub fn Bela_usage();
}
unsafe extern "C" {
    #[doc = " \\brief Get the version of Bela you are running."]
    pub fn Bela_getVersion(
        major: *mut ::core::ffi::c_int,
        minor: *mut ::core::ffi::c_int,
        bugfix: *mut ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    #[doc = " \\brief Set level of verbose (debugging) printing.\n\n \\param level Verbosity level of the internal Bela system. 0 by default; higher values will\n print more information. Presently all positive numbers produce the same level of printing."]
    pub fn Bela_setVerboseLevel(level: ::core::ffi::c_int);
}
unsafe extern "C" {
    #[doc = " \\brief Detect what hardware we are running on.\n\n\n \\param mode How to perform the detection. The behaviour is described in #BelaHwDetectMode."]
    pub fn Bela_detectHw(mode: BelaHwDetectMode) -> BelaHw;
}
